# kv-storage

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
benches/: kv_bench.rs
clients/nodejs/: LICENSE  README.md  debug-client.js  debug-client2.js  debug-put.js  debug-put2.js  debug-test.js  eslint.config.mjs  example.js  package.json  test-binary.js  test-debug-http2.js  test-http2.js  test-seq.js  tsconfig.json
clients/nodejs/src/: index.test.ts  index.ts
clients/rust/: CHANGELOG.md  Cargo.toml  README.md
clients/rust/.cargo/: config.toml
clients/rust/examples/: basic_usage.rs  batch_operations.rs
clients/rust/src/: client.rs  error.rs  lib.rs  types.rs
clients/rust/tests/: integration_test.rs  tls_integration_test.rs
scripts/: bench-summary.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/server/: handler.rs  mod.rs
src/server/handlers/: batch.rs  common.rs  delete.rs  get.rs  head.rs  list.rs  metrics.rs  mod.rs  put.rs
src/server/middleware/: auth.rs
src/storage/: db.rs  keys.rs  mod.rs  objects.rs  tests.rs  transactions.rs
src/util/: compression.rs  hash.rs  metrics.rs  mod.rs
tests/: integration_test.rs  tls_integration_test.rs
