[package]
name = "kv-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP/2 server
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Storage
sled = "0.34.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
url = "2.5"

# Compression
zstd = "0.13"

# Hashing
twox-hash = "2"

# Security
subtle = "2.6"
zeroize = "1"

# Utils
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.9"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
tempfile = "3.14"
criterion = "0.5"
serial_test = "3"

[[bench]]
name = "kv_bench"
harness = false
