[package]
name = "kv-storage-client"
version = "0.1.0"
edition = "2021"
authors = ["denisix"]
description = "A modern HTTP/2 client for the KV Storage server"
repository = "https://github.com/denisix/kv-storage/clients/rust"
license = "MIT"
keywords = ["http2", "kv-storage", "async", "client"]
categories = ["database", "network-programming", "web-programming::http-client"]

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP/2 client
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
bytes = "1.9"
tracing = "0.1"
thiserror = "2.0"
url = "2.5"
percent-encoding = "2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
tokio = { version = "1.42", features = ["full", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.docs.rs]
all-features = true
